--- a/index.html
+++ b/index.html
@@ -304,13 +304,21 @@
             display: inline-block;
         }
 
+        /* NEW: container que remove o whitespace padrão entre imgs inline */
+        .flags {
+            display: inline-flex;
+            gap: 0; /* sem espaço entre as bandeiras */
+            align-items: center;
+            vertical-align: middle;
+        }
+
         /* Classe para inserir imagens de bandeira no tamanho de emoji */
         .flag-image {
             /* use altura fixa (pixel) para consistência cross-device */
             height: 18px;
             width: auto;
             vertical-align: middle;
-            margin: 0 6px;
+            margin: 0; /* removido o espaçamento lateral para colar as bandeiras */
             border-radius: 2px;
             box-shadow: 0 1px 3px rgba(0,0,0,0.08);
             border: 0.5px solid rgba(0,0,0,0.06);
@@ -323,7 +331,7 @@
             font-size: 18px;
             line-height: 1;
             vertical-align: middle;
-            margin: 0 6px;
+            margin: 0; /* alinhamento sem espaços */
             display: inline-block;
         }
 
@@ -444,11 +452,11 @@
             }
             .flag-image {
                 height: 16px;
-                margin: 0 4px;
+                margin: 0;
             }
             .flag-emoji-fallback {
                 font-size: 16px;
-                margin: 0 4px;
+                margin: 0;
             }
         }
 
@@ -569,10 +577,12 @@
                         Meus atendimentos acontecem apenas on-line para qualquer lugar do Brasil e do mundo. Ah, em português e <em>en español</em>
                         <!-- Substitua os caminhos abaixo pelas suas imagens locais.
                              onerror insere emoji fallback caso a imagem não carregue no mobile -->
-                        <img src="imagens/flags/br.png" srcset="imagens/flags/br@2x.png 2x" alt="Bandeira do Brasil" class="flag-image"
-                             onerror="this.onerror=null; this.style.display='none'; var s=document.createElement('span'); s.className='flag-emoji-fallback'; s.textContent='🇧🇷'; this.parentNode.insertBefore(s,this.nextSibling);">
-                        <img src="imagens/flags/es.png" srcset="imagens/flags/es@2x.png 2x" alt="Bandeira da Espanha" class="flag-image"
-                             onerror="this.onerror=null; this.style.display='none'; var s=document.createElement('span'); s.className='flag-emoji-fallback'; s.textContent='🇪🇸'; this.parentNode.insertBefore(s,this.nextSibling);">
+                        <span class="flags">
+                            <img src="imagens/flags/br.png" srcset="imagens/flags/br@2x.png 2x" alt="Bandeira do Brasil" class="flag-image"
+                                 onerror="this.onerror=null; this.style.display='none'; var s=document.createElement('span'); s.className='flag-emoji-fallback'; s.textContent='🇧🇷'; this.parentNode.insertBefore(s,this.nextSibling);">
+                            <img src="imagens/flags/es.png" srcset="imagens/flags/es@2x.png 2x" alt="Bandeira da Espanha" class="flag-image"
+                                 onerror="this.onerror=null; this.style.display='none'; var s=document.createElement('span'); s.className='flag-emoji-fallback'; s.textContent='🇪🇸'; this.parentNode.insertBefore(s,this.nextSibling);">
+                        </span>
                     </p>
                     <p class="typing-text">Vamos começar?</p>
                     <p class="typing-text">Mas antes, leia um pouquinho sobre a minha abordagem, minha linha teórica e o meu trabalho clínico. ⤵️</p>
