--- a/index.html
+++ b/index.html
@@ -443,6 +443,13 @@
             50% { transform: scale(1.06); box-shadow: 0 0 0 12px rgba(255,0,0,0); }
             100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(255,0,0,0); }
         }
+        
+        /* Nova regra para o link do Instagram */
+        #contato ul li a {
+            color: var(--cor-primaria); /* Usa a cor ciano definida */
+            text-decoration: none;
+            font-weight: 500;
+        }
 
         /* Ajustes para telas bem pequenas */
         @media (max-width: 480px) {
@@ -652,8 +659,8 @@
             <div class="section-content-centered">
                 <ul>
                     <li><i class="fas fa-envelope"></i> kassianelinspsi@gmail.com</li>
-                    <li><i class="fab fa-whatsapp"></i> WhatsApp: 82 99907-9493</li>
-                    <li><i class="fab fa-instagram"></i> Instagram: <a href="https://www.instagram.com/kassianelinspsi/" target="_blank" rel="noopener"> @kassianelinspsi</a></li>
+                    <li><i class="fab fa-whatsapp"></i> 82 99907-9493</li>
+                    <li><i class="fab fa-instagram"></i> <a href="https://www.instagram.com/kassianelinspsi/" target="_blank" rel="noopener"> @kassianelinspsi</a></li>
                 </ul>
                 <img src="imagens/qrcode.jpg" alt="QR CODE do WhatsApp" width="150" style="margin-top: 20px;">
             </div>
