--- a/index.html
+++ b/index.html
@@ -15,23 +15,32 @@
     <div class="header-placeholder" id="header-placeholder"></div>
     <div class="header" id="header" data-keep-floating="1">
         <img src="imagens/logo.png" alt="Logo Kassiane Lins Psicóloga" width="100" height="100" class="logo">
-        <h1>Kassiane Lins dos Santos</h1>
-        <p>Psicóloga Clínica - CRP 15/6551</p>
+        <h1 data-key="header-title">Kassiane Lins dos Santos</h1>
+        <p data-key="header-subtitle">Psicóloga Clínica - CRP 15/6551</p>
+        
+        <span class="lang-icons-container">
+            <button id="lang-pt" class="lang-icon" aria-label="Traduzir para Português">
+                <img src="imagens/flags/br.png" srcset="imagens/flags/br@2x.png 2x" alt="Bandeira do Brasil" class="flag-image-btn">
+            </button>
+            <button id="lang-es" class="lang-icon" aria-label="Traduzir para Espanhol">
+                <img src="imagens/flags/es.png" srcset="imagens/flags/es@2x.png 2x" alt="Bandeira da Espanha" class="flag-image-btn">
+            </button>
+        </span>
     </div>
 
     <main>
         <div class="slideshow-container">
             <div class="mySlides">
                 <img src="https://picsum.photos/1200/450?random=1" alt="Imagem 1">
-                <div class="text">Nenhum sofrimento é pequeno demais para não ser escutado.</div>
+                <div class="text" data-key="slide-text-1">Nenhum sofrimento é pequeno demais para não ser escutado.</div>
             </div>
             <div class="mySlides">
                 <img src="https://picsum.photos/1200/450?random=2" alt="Imagem 2">
-                <div class="text">Todo sujeito merece um espaço para dizer de si.</div>
+                <div class="text" data-key="slide-text-2">Todo sujeito merece um espaço para dizer de si.</div>
             </div>
             <div class="mySlides">
                 <img src="https://picsum.photos/1200/450?random=3" alt="Imagem 3">
-                <div class="text">Na fala, cada um pode encontrar novos caminhos para viver.</div>
+                <div class="text" data-key="slide-text-3">Na fala, cada um pode encontrar novos caminhos para viver.</div>
             </div>
         </div>
 
@@ -42,15 +51,15 @@
         </div>
 
         <section id="sobre">
-            <h2>Sobre Mim</h2>
+            <h2 data-key="about-title">Sobre Mim</h2>
             <div class="section-sobre-content">
                 <div class="section-sobre-text">
-                    <p class="typing-text">Oi, que bom te ter aqui!</p>
-                    <p class="typing-text">Deixa eu me apresentar para que você me conheça um pouquinho melhor:</p>
-                    <p class="typing-text">Eu tenho 27 anos, sou de Maceió - Alagoas, formada em Psicologia pelo Centro Universitário de Maceió (2021), com capacitação em Saúde Mental pela FAVENI e atualmente pós-graduanda em Psicologia Clínica pela PUC-RS.</p>
-                    <p class="typing-text">Amo estudar Psicanálise e ler, desde romances a poesias. Também amo ouvir jazz e o mar. Estar na natureza nos ajuda a nos conectar com nós mesmos, não é poético?</p>
-                    <p class="typing-text">Já morei por um tempo na Argentina e trago comigo uma alma viajante, apaixonada por conhecer novas culturas e lugares.</p>
-                    <p class="typing-text">
+                    <p class="typing-text" data-key="about-text-1">Oi, que bom te ter aqui!</p>
+                    <p class="typing-text" data-key="about-text-2">Deixa eu me apresentar para que você me conheça um pouquinho melhor:</p>
+                    <p class="typing-text" data-key="about-text-3">Eu tenho 27 anos, sou de Maceió - Alagoas, formada em Psicologia pelo Centro Universitário de Maceió (2021), com capacitação em Saúde Mental pela FAVENI e atualmente pós-graduanda em Psicologia Clínica pela PUC-RS.</p>
+                    <p class="typing-text" data-key="about-text-4">Amo estudar Psicanálise e ler, desde romances a poesias. Também amo ouvir jazz e o mar. Estar na natureza nos ajuda a nos conectar com nós mesmos, não é poético?</p>
+                    <p class="typing-text" data-key="about-text-5">Já morei por um tempo na Argentina e trago comigo uma alma viajante, apaixonada por conhecer novas culturas e lugares.</p>
+                    <p class="typing-text" data-key="about-text-6">
                         Meus atendimentos acontecem apenas on-line para qualquer lugar do Brasil e do mundo. Ah, em português e <em>en español</em>
                         <span class="flags">
                             <img src="imagens/flags/br.png" srcset="imagens/flags/br@2x.png 2x" alt="Bandeira do Brasil" class="flag-image"
@@ -59,8 +68,8 @@
                                     onerror="this.onerror=null; this.style.display='none'; var s=document.createElement('span'); s.className='flag-emoji-fallback'; s.textContent='🇪🇸'; this.parentNode.insertBefore(s,this.nextSibling);">
                         </span>
                     </p>
-                    <p class="typing-text">Vamos começar?</p>
-                    <p class="typing-text">Mas antes, leia um pouquinho sobre a minha abordagem, minha linha teórica e o meu trabalho clínico. ⤵️</p>
+                    <p class="typing-text" data-key="about-text-7">Vamos começar?</p>
+                    <p class="typing-text" data-key="about-text-8">Mas antes, leia um pouquinho sobre a minha abordagem, minha linha teórica e o meu trabalho clínico. ⤵️</p>
                 </div>
                 <div class="section-sobre-image">
                     <img src="imagens/kassi-perfil.jpeg" alt="Perfil de Kassiane Lins" width="250" height="300" class="profile-img">
@@ -69,31 +78,31 @@
         </section>
 
         <section id="abordagem">
-            <h2>Minha Abordagem</h2>
+            <h2 data-key="approach-title">Minha Abordagem</h2>
             <div class="section-content-centered">
-                <p class="typing-text">Dedico-me ao atendimento clínico de adultos, oferecendo um espaço de escuta que considera a singularidade de cada sujeito. Entendo que todo sofrimento merece ser acolhido e que, muitas vezes, é nos detalhes do que se diz que se revelam sentidos importantes sobre a vida de cada uno.</p>
-                <p class="typing-text">A psicanálise parte da ideia de que o inconsciente se manifesta na fala, nos sintomas e nos impasses que encontramos ao longo da vida. Meu trabalho é acompanhar o sujeito nesse percurso, possibilitando que encontre novas formas de se implicar em sua história e de lidar com aquilo que o faz sofrer.</p>
+                <p class="typing-text" data-key="approach-text-1">Dedico-me ao atendimento clínico de adultos, oferecendo um espaço de escuta que considera a singularidade de cada sujeito. Entendo que todo sofrimento merece ser acolhido e que, muitas vezes, é nos detalhes do que se diz que se revelam sentidos importantes sobre a vida de cada uno.</p>
+                <p class="typing-text" data-key="approach-text-2">A psicanálise parte da ideia de que o inconsciente se manifesta na fala, nos sintomas e nos impasses que encontramos ao longo da vida. Meu trabalho é acompanhar o sujeito nesse percurso, possibilitando que encontre novas formas de se implicar em sua história e de lidar com aquilo que o faz sofrer.</p>
             </div>
         </section>
 
         <section id="servicos">
-            <h2>Serviços</h2>
+            <h2 data-key="services-title">Serviços</h2>
             <div class="section-content-centered">
                 <ul>
-                    <li><i class="fas fa-check-circle"></i> Sessões Online</li>
-                    <li><i class="fas fa-check-circle"></i> Aconselhamento Psicológico</li>
-                    <li><i class="fas fa-check-circle"></i> Psicoterapia individual para adultos</li>
+                    <li><i class="fas fa-check-circle"></i> <span data-key="service-item-1">Sessões Online</span></li>
+                    <li><i class="fas fa-check-circle"></i> <span data-key="service-item-2">Aconselhamento Psicológico</span></li>
+                    <li><i class="fas fa-check-circle"></i> <span data-key="service-item-3">Psicoterapia individual para adultos</span></li>
                 </ul>
             </div>
         </section>
 
         <section id="contato">
-            <h2>Contato</h2>
+            <h2 data-key="contact-title">Contato</h2>
             <div class="section-content-centered">
                 <ul>
                     <li><i class="fas fa-envelope"></i> kassianelinspsi@gmail.com</li>
                     <li><i class="fab fa-whatsapp"></i> 82 99907-9493</li>
-                    <li><i class="fab fa-instagram"></i> <a href="https://www.instagram.com/kassianelinspsi/" target="_blank" rel="noopener"> @kassianelinspsi</a></li>
+                    <li data-key="contact-instagram"><i class="fab fa-instagram"></i> <a href="https://www.instagram.com/kassianelinspsi/" target="_blank" rel="noopener"> @kassianelinspsi</a></li>
                 </ul>
                 <img src="imagens/qrcode.jpg" alt="QR CODE do WhatsApp" width="150" style="margin-top: 20px;">
             </div>
@@ -110,7 +119,7 @@
     </div>
 
     <footer>
-        <p>"Cuidar de si é acolher o que insiste em ser dito."</p>
+        <p data-key="footer-text">"Cuidar de si é acolher o que insiste em ser dito."</p>
     </footer>
 
     <script src="javascript/script.js" defer></script>
