--- a/index.html
+++ b/index.html
@@ -18,13 +18,8 @@
         <h1 data-key="header-title">Kassiane Lins dos Santos</h1>
         <p data-key="header-subtitle">Psicóloga Clínica - CRP 15/6551</p>
         
-        <span class="lang-icons-container">
-            <button id="lang-pt" class="lang-icon" aria-label="Traduzir para Português">
-                <img src="imagens/flags/br.png" srcset="imagens/flags/br@2x.png 2x" alt="Bandeira do Brasil" class="flag-image-btn">
-            </button>
-            <button id="lang-es" class="lang-icon" aria-label="Traduzir para Espanhol">
-                <img src="imagens/flags/es.png" srcset="imagens/flags/es@2x.png 2x" alt="Bandeira da Espanha" class="flag-image-btn">
-            </button>
+        <span class="lang-icon" id="lang-es" aria-label="Traduzir para Espanhol">
+            <img src="imagens/flags/es.png" srcset="imagens/flags/es@2x.png 2x" alt="Bandeira da Espanha" class="flag-image-btn">
         </span>
     </div>
 
