--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
             <h2>Sobre Mim</h2>
             <div class="section-sobre-content">
                 <div class="section-sobre-text">
-                    <p class="typing-text">Oi, que bom te ter aqui!</p>
-                    <p class="typing-text">Deixa eu me apresentar para que você me conheça um pouquinho melhor:</p>
-                    <p class="typing-text">Eu tenho 27 anos, sou de Maceió - Alagoas, formada em Psicologia pelo Centro Universitário de Maceió (2021), com capacitação em Saúde Mental pela FAVENI e atualmente pós-graduanda em Psicologia Clínica pela PUC-RS.</p>
-                    <p class="typing-text">Amo estudar Psicanálise e ler, desde romances a poesias. Também amo ouvir jazz e o mar. Estar na natureza nos ajuda a nos conectar com nós mesmos, não é poético?</p>
-                    <p class="typing-text">Já morei por um tempo na Argentina e trago comigo uma alma viajante, apaixonada por conhecer novas culturas e lugares.</p>
+                    <p class="typing-text">Oi, que bom te ter aqui 🌿</p>
+                    <p class="typing-text">Deixa eu me apresentar rapidinho para você me conhecer um pouco melhor:</p>
+                    <p class="typing-text">Sou psicóloga, formada pelo Centro Universitário Unima Afya (2021), com capacitação em Saúde Mental pela FAVENI e, atualmente, pós-graduanda em Psicologia Clínica pela PUC-RS.</p>
+                    <p class="typing-text">Gosto de pensar o cuidado como um encontro, um espaço de escuta, acolhimento e reconexão. Acredito que o processo terapêutico nos ajuda a olhar para dentro com mais gentileza e a seguir em direção ao que faz sentido.</p>
+                    <p class="typing-text">Já morei por um tempo em outro país e trago dessa experiência um olhar interessado e aberto para as diferentes formas de ser e de estar no mundo.</p>
+                    <p class="typing-text">Atendo on-line, para qualquer lugar do Brasil e do mundo, em português e espanhol.</p>
+                    <p class="typing-text">Vamos começar? 💬</p>
                     <p class="typing-text">
                         Meus atendimentos acontecem apenas on-line para qualquer lugar do Brasil e do mundo. Ah, em português e <em>en español</em>
                         <span class="flags">
