--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="section-content-centered">
                 <ul>
                     <li><i class="fas fa-envelope"></i> kassianelinspsi@gmail.com</li>
-                    <li><i class="fab fa-whatsapp"></i> 82 99907-9493</li>
+                    <li><i class="fab fa-whatsapp"></i> 82 999079493</li>
                     <li><i class="fab fa-instagram"></i> <a href="https://www.instagram.com/kassianelinspsi/" target="_blank" rel="noopener"> @kassianelinspsi</a></li>
                 </ul>
                 <img src="imagens/qrcode.jpg" alt="QR CODE do WhatsApp" width="150" style="margin-top: 20px;">
