--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </main>
 
     <div class="floating-buttons" data-keep-floating="1" aria-hidden="false">
-        <a href="https://wa.me/5582999079493" target="_blank" class="whatsapp" title="WhatsApp" aria-label="WhatsApp" data-keep-floating="1" rel="noopener">
+        <a href="https://api.whatsapp.com/send?phone=5582999079493&text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es" target="_blank" class="whatsapp" title="WhatsApp" aria-label="WhatsApp" data-keep-floating="1" rel="noopener">
             <i class="fab fa-whatsapp" aria-hidden="true"></i>
         </a>
         <a href="https://www.instagram.com/kassianelinspsi/" target="_blank" class="instagram" title="Instagram" aria-label="Instagram" data-keep-floating="1" rel="noopener">
