--- a/index.html
+++ b/index.html
@@ -1,119 +1,144 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17583086967"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'AW-17583086967');
-</script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17583086967"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'AW-17583086967');
+  </script>
 
-    
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Kassiane Lins – Psicóloga Clínica</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Kassiane Lins – Psicóloga Clínica</title>
 
-    <link rel="stylesheet" href="css/style.css">
-
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
-    <div class="header-placeholder" id="header-placeholder"></div>
-    <div class="header" id="header" data-keep-floating="1">
-        <img src="imagens/logo.png" alt="Logo Kassiane Lins Psicóloga" width="100" height="100" class="logo">
-        <h1>Kassiane Lins dos Santos</h1>
-        <p>Psicóloga Clínica - CRP 15/6551</p>
+  <div class="header-placeholder" id="header-placeholder"></div>
+  <div class="header" id="header" data-keep-floating="1">
+    <img src="imagens/logo.png" alt="Logo Kassiane Lins Psicóloga" width="100" height="100" class="logo">
+    <h1>Kassiane Lins dos Santos</h1>
+    <p>Psicóloga Clínica - CRP 15/6551</p>
+  </div>
+
+  <main>
+    <div class="slideshow-container">
+      <div class="mySlides">
+        <img src="https://picsum.photos/1200/450?random=1" alt="Imagem 1">
+        <div class="text">Nenhum sofrimento é pequeno demais para não ser escutado.</div>
+      </div>
+      <div class="mySlides">
+        <img src="https://picsum.photos/1200/450?random=2" alt="Imagem 2">
+        <div class="text">Todo sujeito merece um espaço para dizer de si.</div>
+      </div>
+      <div class="mySlides">
+        <img src="https://picsum.photos/1200/450?random=3" alt="Imagem 3">
+        <div class="text">Na fala, cada um pode encontrar novos caminhos para viver.</div>
+      </div>
     </div>
 
-    <main>
-        <div class="slideshow-container">
-            <div class="mySlides">
-                <img src="https://picsum.photos/1200/450?random=1" alt="Imagem 1">
-                <div class="text">Nenhum sofrimento é pequeno demais para não ser escutado.</div>
-            </div>
-            <div class="mySlides">
-                <img src="https://picsum.photos/1200/450?random=2" alt="Imagem 2">
-                <div class="text">Todo sujeito merece um espaço para dizer de si.</div>
-            </div>
-            <div class="mySlides">
-                <img src="https://picsum.photos/1200/450?random=3" alt="Imagem 3">
-                <div class="text">Na fala, cada um pode encontrar novos caminhos para viver.</div>
-            </div>
-        </div>
-
-        <div class="dot-container">
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
-        </div>
-
-        <section id="sobre">
-            <h2>Sobre Mim</h2>
-            <div class="section-sobre-content">
-                <div class="section-sobre-text">
-                    <p class="typing-text">Oi, que bom te ter aqui 🌿</p>
-                    <p class="typing-text">Deixa eu me apresentar rapidinho para você me conhecer um pouco melhor:</p>
-                    <p class="typing-text">Sou psicóloga, formada pelo Centro Universitário Unima Afya (2021), com capacitação em Saúde Mental pela FAVENI e, atualmente, pós-graduanda em Psicologia Clínica pela PUC-RS.</p>
-                    <p class="typing-text">Gosto de pensar o cuidado como um encontro, um espaço de escuta, acolhimento e reconexão. Acredito que o processo terapêutico nos ajuda a olhar para dentro com mais gentileza e a seguir em direção ao que faz sentido.</p>
-                    <p class="typing-text">Já morei por um tempo em outro país e trago dessa experiência um olhar interessado e aberto para as diferentes formas de ser e de estar no mundo.</p>
-                    <p class="typing-text">Atendo on-line, para qualquer lugar do Brasil e do mundo, em português e espanhol.</p>
-                    <p class="typing-text">Vamos começar? 💬</p>
-                </div>
-                <div class="section-sobre-image">
-                    <img src="imagens/kassi-perfil.jpeg" alt="Perfil de Kassiane Lins" width="250" height="300" class="profile-img">
-                </div>
-            </div>
-        </section>
-
-        <section id="abordagem">
-            <h2>Minha Abordagem</h2>
-            <div class="section-content-centered">
-                <p class="typing-text">Dedico-me ao atendimento clínico de adultos, oferecendo um espaço de escuta que considera a singularidade de cada sujeito. Entendo que todo sofrimento merece ser acolhido e que, muitas vezes, é nos detalhes do que se diz que se revelam sentidos importantes sobre a vida de cada uno.</p>
-                <p class="typing-text">A psicanálise parte da ideia de que o inconsciente se manifesta na fala, nos sintomas e nos impasses que encontramos ao longo da vida. Meu trabalho é acompanhar o sujeito nesse percurso, possibilitando que encontre novas formas de se implicar em sua história e de lidar com aquilo que o faz sofrer.</p>
-            </div>
-        </section>
-
-        <section id="servicos">
-            <h2>Serviços</h2>
-            <div class="section-content-centered">
-                <ul>
-                    <li><i class="fas fa-check-circle"></i> Sessões Online</li>
-                    <li><i class="fas fa-check-circle"></i> Aconselhamento Psicológico</li>
-                    <li><i class="fas fa-check-circle"></i> Psicoterapia individual para adultos</li>
-                </ul>
-            </div>
-        </section>
-
-        <section id="contato">
-            <h2>Contato</h2>
-            <div class="section-content-centered">
-                <ul>
-                    <li><i class="fas fa-envelope"></i> kassianelinspsi@gmail.com</li>
-                    <li><i class="fab fa-whatsapp"></i> 82 999079493</li>
-                    <li><i class="fab fa-instagram"></i> <a href="https://www.instagram.com/kassianelinspsi/" target="_blank" rel="noopener"> @kassianelinspsi</a></li>
-                </ul>
-                <img src="imagens/qrcode.jpg" alt="QR CODE do WhatsApp" width="150" style="margin-top: 20px;">
-            </div>
-        </section>
-    </main>
-
-    <div class="floating-buttons" data-keep-floating="1" aria-hidden="false">
-        <a href="https://api.whatsapp.com/send?phone=5582999079493&text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es" target="_blank" class="whatsapp" title="WhatsApp" aria-label="WhatsApp" data-keep-floating="1" rel="noopener">
-            <i class="fab fa-whatsapp" aria-hidden="true"></i>
-        </a>
-        <a href="https://www.instagram.com/kassianelinspsi/" target="_blank" class="instagram" title="Instagram" aria-label="Instagram" data-keep-floating="1" rel="noopener">
-            <i class="fab fa-instagram" aria-hidden="true"></i>
-        </a>
+    <div class="dot-container">
+      <span class="dot" onclick="currentSlide(1)"></span>
+      <span class="dot" onclick="currentSlide(2)"></span>
+      <span class="dot" onclick="currentSlide(3)"></span>
     </div>
 
-    <footer>
-        <p>"Cuidar de si é acolher o que insiste em ser dito."</p>
-    </footer>
+    <section id="sobre">
+      <h2>Sobre Mim</h2>
+      <div class="section-sobre-content">
+        <div class="section-sobre-text">
+          <p class="typing-text">Oi, que bom te ter aqui 🌿</p>
+          <p class="typing-text">Deixa eu me apresentar rapidinho para você me conhecer um pouco melhor:</p>
+          <p class="typing-text">Sou psicóloga, formada pelo Centro Universitário Unima Afya (2021), com capacitação em Saúde Mental pela FAVENI e, atualmente, pós-graduanda em Psicologia Clínica pela PUC-RS.</p>
+          <p class="typing-text">Gosto de pensar o cuidado como um encontro, um espaço de escuta, acolhimento e reconexão. Acredito que o processo terapêutico nos ajuda a olhar para dentro com mais gentileza e a seguir em direção ao que faz sentido.</p>
+          <p class="typing-text">Já morei por um tempo em outro país e trago dessa experiência um olhar interessado e aberto para as diferentes formas de ser e de estar no mundo.</p>
+          <p class="typing-text">Atendo on-line, para qualquer lugar do Brasil e do mundo, em português e espanhol.</p>
+          <p class="typing-text">Vamos começar? 💬</p>
+        </div>
+        <div class="section-sobre-image">
+          <img src="imagens/kassi-perfil.jpeg" alt="Perfil de Kassiane Lins" width="250" height="300" class="profile-img">
+        </div>
+      </div>
+    </section>
 
-    <script src="javascript/script.js" defer></script>
+    <section id="abordagem">
+      <h2>Minha Abordagem</h2>
+      <div class="section-content-centered">
+        <p class="typing-text">Dedico-me ao atendimento clínico de adultos, oferecendo um espaço de escuta que considera a singularidade de cada sujeito. Entendo que todo sofrimento merece ser acolhido e que, muitas vezes, é nos detalhes do que se diz que se revelam sentidos importantes sobre a vida de cada uno.</p>
+        <p class="typing-text">A psicanálise parte da ideia de que o inconsciente se manifesta na fala, nos sintomas e nos impasses que encontramos ao longo da vida. Meu trabalho é acompanhar o sujeito nesse percurso, possibilitando que encontre novas formas de se implicar em sua história e de lidar com aquilo que o faz sofrer.</p>
+      </div>
+    </section>
+
+    <section id="servicos">
+      <h2>Serviços</h2>
+      <div class="section-content-centered">
+        <ul>
+          <li><i class="fas fa-check-circle"></i> Sessões Online</li>
+          <li><i class="fas fa-check-circle"></i> Aconselhamento Psicológico</li>
+          <li><i class="fas fa-check-circle"></i> Psicoterapia individual para adultos</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="contato">
+      <h2>Contato</h2>
+      <div class="section-content-centered">
+        <ul>
+          <li><i class="fas fa-envelope"></i> kassianelinspsi@gmail.com</li>
+          <li><i class="fab fa-whatsapp"></i> 
+            <a href="https://api.whatsapp.com/send?phone=5582999079493&text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es"
+               target="_blank"
+               rel="noopener"
+               onclick="gtag('event', 'conversion', {'send_to': 'AW-17583086967/WHATSAPP_CLICK_ID'});">
+               82 999079493
+            </a>
+          </li>
+          <li><i class="fab fa-instagram"></i> 
+            <a href="https://www.instagram.com/kassianelinspsi/" 
+               target="_blank" 
+               rel="noopener"
+               onclick="gtag('event', 'conversion', {'send_to': 'AW-17583086967/INSTAGRAM_CLICK_ID'});">
+               @kassianelinspsi
+            </a>
+          </li>
+        </ul>
+        <img src="imagens/qrcode.jpg" alt="QR CODE do WhatsApp" width="150" style="margin-top: 20px;">
+      </div>
+    </section>
+  </main>
+
+  <div class="floating-buttons" data-keep-floating="1" aria-hidden="false">
+    <a href="https://api.whatsapp.com/send?phone=5582999079493&text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es"
+       target="_blank"
+       class="whatsapp"
+       title="WhatsApp"
+       aria-label="WhatsApp"
+       rel="noopener"
+       onclick="gtag('event', 'conversion', {'send_to': 'AW-17583086967/WHATSAPP_CLICK_ID'});">
+      <i class="fab fa-whatsapp" aria-hidden="true"></i>
+    </a>
+
+    <a href="https://www.instagram.com/kassianelinspsi/"
+       target="_blank"
+       class="instagram"
+       title="Instagram"
+       aria-label="Instagram"
+       rel="noopener"
+       onclick="gtag('event', 'conversion', {'send_to': 'AW-17583086967/INSTAGRAM_CLICK_ID'});">
+      <i class="fab fa-instagram" aria-hidden="true"></i>
+    </a>
+  </div>
+
+  <footer>
+    <p>"Cuidar de si é acolher o que insiste em ser dito."</p>
+  </footer>
+
+  <script src="javascript/script.js" defer></script>
 </body>
 </html>
